--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Cinema</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="shortcut icon" href="./img/favicon.ico.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://kit.fontawesome.com/a1dbf9be79.css" crossorigin="anonymous">
 </head>
 
 <body>
@@ -16,23 +17,88 @@
         <img class="sync-black" src=".//img/logo_mobile_black.png" alt="black-logo">
     </header>
 
-    <div class="nav">
+    <div class="first-title">
 
-        <div class="courses">
-            <img class="globe" src="./img/globe.png" alt="globe">
-            <p>онлайн курс</p>
+        <div class="nav">
+
+            <div class="courses">
+                <img class="globe" src="./img/globe.png" alt="globe">
+                <p class="nav-status"> онлайн курс</p>
+            </div>
+
+            <div class="time">
+                <img class="clock" src="./img/img_135744.png" alt="clock">
+                <p class="nav-status">18 часов</p>
+            </div>
+
+            <div class="date">
+                <img class="calendar" src="./img/calendar_2.png" alt="calendar">
+                <p class="nav-status">8 сентября</p>
+            </div>
+
         </div>
-        <div class="time">
-            <img class="clock" src="./img/img_135744.png" alt="clock">
-            <p>18 часов</p>
-        </div>
-        <div class="date">
-            <img class="calendar" src="./img/calendar_2.png" alt="calendar">
-            <p>8 сентября</p>
-        </div>
+
+        <section class="how-to">
+            <h1>Как смотреть кино</h1>
+            <div class="sitting-shade">
+                <img class="sitting-cameraman" src="./img/noroot1.png" alt="sitting-cameraman">
+                <img class="first-shade" src="./img/Ellipse2.png" alt="shade">
+            </div>
+        </section>
+    </div>
+    <div class="tarkov-box">
+        <p class="tarkov">Зритель для меня
+            не потребитель моей продукции, не судья, а соучастник творчества, соавтор. </p>
+        <p class="name-tarkov">Андрей Тарковский</p>
     </div>
 
+    <section class="about">
+        <div class="text">
+            <h2 class="about-courses">О курсе</h2>
+            <p>Порой фильмы устроены сложнее четырёхтомных романов. Но читать книги учат со школы, а смотреть кино —
+                нет. При этом без подготовки бывает трудно получить от просмотра удовольствие.</p>
+            <p>
+                На курсе из 8 занятий научимся быть осознанными зрителями. Познакомимся с этапами кинопроизводства и
+                узнаем, как смотреть кино глазами сценариста, режиссёра и монтажёра. Разберёмся в особенностях жанров и
+                рассмотрим важнейшие картины, от «Гражданина Кейна» до «Матрицы».
+            </p>
+        </div>
+        <div class="standing-shade">
+            <img class="stand-cameraman" src="./img/_1_1.png" alt="stand-cameraman">
+            <img class="second-shade" src="./img/Ellipse2.png" alt="shade2">
+        </div>
+    </section>
 
+    <section class="last-cameraman">
+
+        <div class="last-shade">
+            <img src="./img/photo1.png" alt="Crane-Cameraman">
+            <img src="./img/Ellipse3.png" alt="last-shade">
+        </div>
+
+        <div class="duration">
+            <div class="lessons">
+                <h3>8 занятий </h3>
+                <p>Для погружения в кинематограф</p>
+            </div>
+
+            <div class="hours">
+                <h3>2 часа</h3>
+                <p>Длительность каждого занятия</p>
+            </div>
+
+            <div class="weeks">
+                <h3>3 недели</h3>
+                <p>Длительность курса</p>
+            </div>
+
+
+        </div>
+
+
+
+
+    </section>
 
 
 
