--- a/index.html
+++ b/index.html
@@ -71,36 +71,69 @@
 
     <section class="last-cameraman">
 
-        <div class="last-shade">
-            <img src="./img/photo1.png" alt="Crane-Cameraman">
-            <img src="./img/Ellipse3.png" alt="last-shade">
+        <div class="crane-shade">
+            <img class="crane" src="./img/photo1.png" alt="Crane-Cameraman">
+            <img class="last-shade" src="./img/Ellipse3.png" alt="last-shade">
         </div>
 
         <div class="duration">
+
             <div class="lessons">
                 <h3>8 занятий </h3>
-                <p>Для погружения в кинематограф</p>
+                <p class="duration-text">Для погружения в кинематограф</p>
             </div>
 
             <div class="hours">
                 <h3>2 часа</h3>
-                <p>Длительность каждого занятия</p>
+                <p class="duration-text">Длительность каждого занятия</p>
             </div>
 
             <div class="weeks">
                 <h3>3 недели</h3>
-                <p>Длительность курса</p>
+                <p class="duration-text">Длительность курса</p>
             </div>
 
-
         </div>
+    </section>
+
+    <section class="format">
+        <h2>Формат занятий</h2>
+
+        <div class="format-about">
+
+            <div class="webinar">
+                <h4 class="blue-color">Вебинары</h4>
+                <p>Занятия проходят онлайн в режиме вебинаров с преподавателем</p>
+            </div>
+
+            <div class="access-forever">
+                <h4 class="blue-color">Доступ навсегда</h4>
+                <p>Если вы не успели на вебинар, всегда можете посмотреть запись в личном кабинете</p>
+            </div>
+
+            <div class="communication">
+                <h4 class="blue-color">Общение</h4>
+                <p>Вы можете задать вопрос преподавателю на занятии</p>
+            </div>
+        </div>
+    </section>
+    <section class="what-know">
+        <h2>Что узнаем</h2>
+        <ul>
+
+            <li>Кто чем занят в съёмочной группе;</li>
+            <li>На какие этапы делится кинопроизводство;</li>
+            <li>Как выглядит сценарий фильма и как он меняется по ходу съёмок;</li>
+            <li>Какими методами режиссёры заставляют нас смеяться, плакать и грустить;</li>
+            <li>Как построение кадра, музыка и свет помогают считывать заложенные в фильм смыслы;</li>
+            <li> Какие жанры есть в кино и как от них зависит работа операторов, осветителей и монтажёров;</li>
+            <li> Как, зная всё это, понимать, о чем фильм.</li>
+        </ul>
 
 
 
 
     </section>
-
-
 
 
 
