--- a/index.html
+++ b/index.html
@@ -117,10 +117,12 @@
             </div>
         </div>
     </section>
-    <section class="what-know">
-        <h2>Что узнаем</h2>
-        <ul>
 
+    <section class="what-know">
+
+        <h2>Что узнаем</h2>
+
+        <ul>
             <li>Кто чем занят в съёмочной группе;</li>
             <li>На какие этапы делится кинопроизводство;</li>
             <li>Как выглядит сценарий фильма и как он меняется по ходу съёмок;</li>
@@ -129,12 +131,70 @@
             <li> Какие жанры есть в кино и как от них зависит работа операторов, осветителей и монтажёров;</li>
             <li> Как, зная всё это, понимать, о чем фильм.</li>
         </ul>
+    </section>
+    <section class="programm">
+
+        <h2>Программа курса</h2>
+
+        <div class="programm-items ">
+
+            <div class="oscar coll">
+                <img src="./img/Rectangle5.png" alt="Oscar icon">
+                <h4 class="prog-text">1. Как создают кино</h4>
+                <p class="prog-name-date">8 сентября 20:00 <br> Данила Кузнецов</p>
+            </div>
+
+
+            <div class="list coll">
+                <img src="./img/Rectangle7.png" alt="List icon">
+                <h4 class="prog-text">2. Взгляд драматурга</h4>
+                <p class="prog-name-date">10 сентября 20:00 <br> Данила Кузнецов</p>
+            </div>
+
+
+            <div class="clapperboard coll">
+                <img src="./img/Rectangle9.png" alt="clapperboard icon">
+                <h4 class="prog-text">3. Взгляд режиссёра</h4>
+                <p class="prog-name-date">13 сентября 13:00 <br> Данила Кузнецов</p>
+
+            </div>
+
+
+            <div class="film-reel coll">
+                <img src="./img/Rectangle13.png" alt="film reel icon">
+                <h4 class="prog-text">4. Взгляд монтажёра</h4>
+                <p class="prog-name-date">15 сентября 20:00 <br> Данила Кузнецов</p>
+            </div>
+
+
+            <div class="mask coll">
+                <img src="./img/Rectangle14.png" alt="mask icon">
+                <h4 class="prog-text">5. Жанры в кино</h4>
+                <p class="prog-name-date">17 сентября 20:00 <br> Данила Кузнецов</p>
+            </div>
+
+
+            <div class="video coll"></div>
+
+
+            <div class="star coll"></div>
+
+
+            <div class="glasses coll"></div>
+
+
+
+
+
+
+
+        </div>
+
 
 
 
 
     </section>
-
 
 
 
