--- a/index.html
+++ b/index.html
@@ -16,188 +16,218 @@
     <header>
         <img class="sync-black" src=".//img/logo_mobile_black.png" alt="black-logo">
     </header>
+    <main>
 
-    <div class="first-title">
+        <div class="first-title">
 
-        <div class="nav">
+            <ul class="courses">
 
-            <div class="courses">
-                <img class="globe" src="./img/globe.png" alt="globe">
-                <p class="nav-status"> онлайн курс</p>
-            </div>
+                <li class="courses-list"><img class="globe" src="./img/globe.png" alt="globe">онлайн-курс</li>
+                <li class="courses-list"><img class="clock" src="./img/img_135744.png" alt="clock">18 часов</li>
+                <li class="courses-list"><img class="date" src="./img/calendar_2.png" alt="date">8 сентября</li>
+            </ul>
 
-            <div class="time">
-                <img class="clock" src="./img/img_135744.png" alt="clock">
-                <p class="nav-status">18 часов</p>
-            </div>
+            <!-- !!!неправильная версия!!! -->
 
-            <div class="date">
-                <img class="calendar" src="./img/calendar_2.png" alt="calendar">
-                <p class="nav-status">8 сентября</p>
-            </div>
+            <!-- <div class="nav">
 
+                <div class="courses">
+                    <img class="globe" src="./img/globe.png" alt="globe">
+                    <p class="nav-status"> онлайн курс</p>
+                </div>
+
+                <div class="time">
+                    <img class="clock" src="./img/img_135744.png" alt="clock">
+                    <p class="nav-status">18 часов</p>
+                </div>
+
+                <div class="date">
+                    <img class="calendar" src="./img/calendar_2.png" alt="calendar">
+                    <p class="nav-status">8 сентября</p>
+                </div>
+
+            </div> -->
+
+
+            <section class="how-to">
+                <h1>Как смотреть кино</h1>
+                <div class="sitting-shade">
+                    <img class="sitting-cameraman" src="./img/noroot1.png" alt="sitting-cameraman">
+                    <img class="first-shade" src="./img/Ellipse2.png" alt="shade">
+                </div>
+            </section>
+        </div>
+        <div class="tarkov-box">
+            <p class="tarkov">Зритель для меня
+                не потребитель моей продукции, не судья, а соучастник творчества, соавтор. </p>
+            <p class="name-tarkov">Андрей Тарковский</p>
         </div>
 
-        <section class="how-to">
-            <h1>Как смотреть кино</h1>
-            <div class="sitting-shade">
-                <img class="sitting-cameraman" src="./img/noroot1.png" alt="sitting-cameraman">
-                <img class="first-shade" src="./img/Ellipse2.png" alt="shade">
+        <section class="about">
+            <div class="text">
+                <h2 class="about-courses">О курсе</h2>
+                <p>Порой фильмы устроены сложнее четырёхтомных романов. Но читать книги учат со школы, а смотреть кино —
+                    нет. При этом без подготовки бывает трудно получить от просмотра удовольствие.</p>
+                <p>
+                    На курсе из 8 занятий научимся быть осознанными зрителями. Познакомимся с этапами кинопроизводства и
+                    узнаем, как смотреть кино глазами сценариста, режиссёра и монтажёра. Разберёмся в особенностях
+                    жанров и
+                    рассмотрим важнейшие картины, от «Гражданина Кейна» до «Матрицы».
+                </p>
+            </div>
+            <div class="standing-shade">
+                <img class="stand-cameraman" src="./img/_1_1.png" alt="stand-cameraman">
+                <img class="second-shade" src="./img/Ellipse2.png" alt="shade2">
             </div>
         </section>
-    </div>
-    <div class="tarkov-box">
-        <p class="tarkov">Зритель для меня
-            не потребитель моей продукции, не судья, а соучастник творчества, соавтор. </p>
-        <p class="name-tarkov">Андрей Тарковский</p>
-    </div>
 
-    <section class="about">
-        <div class="text">
-            <h2 class="about-courses">О курсе</h2>
-            <p>Порой фильмы устроены сложнее четырёхтомных романов. Но читать книги учат со школы, а смотреть кино —
-                нет. При этом без подготовки бывает трудно получить от просмотра удовольствие.</p>
-            <p>
-                На курсе из 8 занятий научимся быть осознанными зрителями. Познакомимся с этапами кинопроизводства и
-                узнаем, как смотреть кино глазами сценариста, режиссёра и монтажёра. Разберёмся в особенностях жанров и
-                рассмотрим важнейшие картины, от «Гражданина Кейна» до «Матрицы».
-            </p>
-        </div>
-        <div class="standing-shade">
-            <img class="stand-cameraman" src="./img/_1_1.png" alt="stand-cameraman">
-            <img class="second-shade" src="./img/Ellipse2.png" alt="shade2">
-        </div>
-    </section>
+        <section class="last-cameraman">
 
-    <section class="last-cameraman">
-
-        <div class="crane-shade">
-            <img class="crane" src="./img/photo1.png" alt="Crane-Cameraman">
-            <img class="last-shade" src="./img/Ellipse3.png" alt="last-shade">
-        </div>
-
-        <div class="duration">
-
-            <div class="lessons">
-                <h3>8 занятий </h3>
-                <p class="duration-text">Для погружения в кинематограф</p>
+            <div class="crane-shade">
+                <img class="crane" src="./img/photo1.png" alt="Crane-Cameraman">
+                <img class="last-shade" src="./img/Ellipse3.png" alt="last-shade">
             </div>
 
-            <div class="hours">
-                <h3>2 часа</h3>
-                <p class="duration-text">Длительность каждого занятия</p>
-            </div>
+            <div class="duration">
 
-            <div class="weeks">
-                <h3>3 недели</h3>
-                <p class="duration-text">Длительность курса</p>
-            </div>
+                <div class="lessons">
+                    <h3>8 занятий </h3>
+                    <p class="duration-text">Для погружения в кинематограф</p>
+                </div>
 
-        </div>
-    </section>
+                <div class="hours">
+                    <h3>2 часа</h3>
+                    <p class="duration-text">Длительность каждого занятия</p>
+                </div>
 
-    <section class="format">
-        <h2>Формат занятий</h2>
-
-        <div class="format-about">
-
-            <div class="webinar">
-                <h4 class="blue-color">Вебинары</h4>
-                <p>Занятия проходят онлайн в режиме вебинаров с преподавателем</p>
-            </div>
-
-            <div class="access-forever">
-                <h4 class="blue-color">Доступ навсегда</h4>
-                <p>Если вы не успели на вебинар, всегда можете посмотреть запись в личном кабинете</p>
-            </div>
-
-            <div class="communication">
-                <h4 class="blue-color">Общение</h4>
-                <p>Вы можете задать вопрос преподавателю на занятии</p>
-            </div>
-        </div>
-    </section>
-
-    <section class="what-know">
-
-        <h2>Что узнаем</h2>
-
-        <ul>
-            <li>Кто чем занят в съёмочной группе;</li>
-            <li>На какие этапы делится кинопроизводство;</li>
-            <li>Как выглядит сценарий фильма и как он меняется по ходу съёмок;</li>
-            <li>Какими методами режиссёры заставляют нас смеяться, плакать и грустить;</li>
-            <li>Как построение кадра, музыка и свет помогают считывать заложенные в фильм смыслы;</li>
-            <li> Какие жанры есть в кино и как от них зависит работа операторов, осветителей и монтажёров;</li>
-            <li> Как, зная всё это, понимать, о чем фильм.</li>
-        </ul>
-    </section>
-    <section class="programm">
-
-        <h2>Программа курса</h2>
-
-        <div class="programm-items ">
-
-            <div class="oscar coll">
-                <img src="./img/Rectangle5.png" alt="Oscar icon">
-                <h4 class="prog-text">1. Как создают кино</h4>
-                <p class="prog-name-date">8 сентября 20:00 <br> Данила Кузнецов</p>
-            </div>
-
-
-            <div class="list coll">
-                <img src="./img/Rectangle7.png" alt="List icon">
-                <h4 class="prog-text">2. Взгляд драматурга</h4>
-                <p class="prog-name-date">10 сентября 20:00 <br> Данила Кузнецов</p>
-            </div>
-
-
-            <div class="clapperboard coll">
-                <img src="./img/Rectangle9.png" alt="clapperboard icon">
-                <h4 class="prog-text">3. Взгляд режиссёра</h4>
-                <p class="prog-name-date">13 сентября 13:00 <br> Данила Кузнецов</p>
+                <div class="weeks">
+                    <h3>3 недели</h3>
+                    <p class="duration-text">Длительность курса</p>
+                </div>
 
             </div>
+        </section>
+
+        <section class="format">
+            <h2>Формат занятий</h2>
+
+            <div class="format-about">
+
+                <div class="webinar">
+                    <h4 class="blue-color">Вебинары</h4>
+                    <p>Занятия проходят онлайн в режиме вебинаров с преподавателем</p>
+                </div>
+
+                <div class="access-forever">
+                    <h4 class="blue-color">Доступ навсегда</h4>
+                    <p>Если вы не успели на вебинар, всегда можете посмотреть запись в личном кабинете</p>
+                </div>
+
+                <div class="communication">
+                    <h4 class="blue-color">Общение</h4>
+                    <p>Вы можете задать вопрос преподавателю на занятии</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="what-know">
+
+            <h2>Что узнаем</h2>
+
+            <ul>
+                <li>Кто чем занят в съёмочной группе;</li>
+                <li>На какие этапы делится кинопроизводство;</li>
+                <li>Как выглядит сценарий фильма и как он меняется по ходу съёмок;</li>
+                <li>Какими методами режиссёры заставляют нас смеяться, плакать и грустить;</li>
+                <li>Как построение кадра, музыка и свет помогают считывать заложенные в фильм смыслы;</li>
+                <li> Какие жанры есть в кино и как от них зависит работа операторов, осветителей и монтажёров;</li>
+                <li> Как, зная всё это, понимать, о чем фильм.</li>
+            </ul>
+        </section>
+        <section class="programm">
+
+            <h2>Программа курса</h2>
+
+            <div class="programm-items ">
+
+                <div class="oscar coll">
+                    <img src="./img/Rectangle5.png" alt="Oscar icon">
+                    <h4 class="prog-text">1. Как создают кино</h4>
+                    <p class="prog-name-date">8 сентября 20:00 <br> Данила Кузнецов</p>
+                </div>
 
 
-            <div class="film-reel coll">
-                <img src="./img/Rectangle13.png" alt="film reel icon">
-                <h4 class="prog-text">4. Взгляд монтажёра</h4>
-                <p class="prog-name-date">15 сентября 20:00 <br> Данила Кузнецов</p>
+                <div class="list coll">
+                    <img src="./img/Rectangle7.png" alt="List icon">
+                    <h4 class="prog-text">2. Взгляд драматурга</h4>
+                    <p class="prog-name-date">10 сентября 20:00 <br> Данила Кузнецов</p>
+                </div>
+
+
+                <div class="clapperboard coll">
+                    <img src="./img/Rectangle9.png" alt="clapperboard icon">
+                    <h4 class="prog-text">3. Взгляд режиссёра</h4>
+                    <p class="prog-name-date">13 сентября 13:00 <br> Данила Кузнецов</p>
+
+                </div>
+
+
+                <div class="film-reel coll">
+                    <img src="./img/Rectangle13.png" alt="film reel icon">
+                    <h4 class="prog-text">4. Взгляд монтажёра</h4>
+                    <p class="prog-name-date">15 сентября 20:00 <br> Данила Кузнецов</p>
+                </div>
+
+
+                <div class="mask coll">
+                    <img src="./img/Rectangle14.png" alt="mask icon">
+                    <h4 class="prog-text">5. Жанры в кино</h4>
+                    <p class="prog-name-date">17 сентября 20:00 <br> Данила Кузнецов</p>
+                </div>
+
+
+                <div class="video coll">
+                    <img src="./img/Rectangle15.png" alt="video icon">
+                    <h4 class="prog-text">6. Язык кино. Семинар</h4>
+                    <p class="prog-name-date">20 сентября 13:00 <br> Данила Кузнецов</p>
+
+                </div>
+
+
+                <div class="star coll">
+                    <img src="./img/Rectangle19.png" alt="star icon">
+                    <h4 class="prog-text">7. Взгляд кинокритика</h4>
+                    <p class="prog-name-date">21 сентября 19:00 <br> Дмитрий Скворцов</p>
+                </div>
+
+
+                <div class="glasses coll">
+                    <img src="./img/Rectangle20.png" alt="glasses icon">
+                    <h4 class="prog-text no-br">8. Осознанный зритель. <br> Семинар</h4>
+                    <p class="prog-name-date">22 сентября 19:00 <br> Дмитрий Скворцов</p>
+                </div>
+            </div>
+        </section>
+        <section class="grey-block">
+            <h2>Курс прошло уже 1616 человек</h2>
+            <div class="comment">
+
             </div>
 
 
-            <div class="mask coll">
-                <img src="./img/Rectangle14.png" alt="mask icon">
-                <h4 class="prog-text">5. Жанры в кино</h4>
-                <p class="prog-name-date">17 сентября 20:00 <br> Данила Кузнецов</p>
-            </div>
 
 
-            <div class="video coll"></div>
 
 
-            <div class="star coll"></div>
 
-
-            <div class="glasses coll"></div>
+        </section>
 
 
 
 
 
 
-
-        </div>
-
-
-
-
-
-    </section>
-
-
-
+    </main>
 </body>
 
 </html>
