--- a/index.html
+++ b/index.html
@@ -57,12 +57,13 @@
                 </div>
             </section>
         </div>
-        <div class="tarkov-box">
-            <p class="tarkov">Зритель для меня
-                не потребитель моей продукции, не судья, а соучастник творчества, соавтор. </p>
-            <p class="name-tarkov">Андрей Тарковский</p>
+        <div class="tarkov-center">
+            <div class="tarkov-box">
+                <p class="tarkov">Зритель для меня не потребитель моей продукции, не судья, а соучастник творчества,
+                    соавтор. </p>
+                <p class="name-tarkov">Андрей Тарковский</p>
+            </div>
         </div>
-
         <section class="about">
             <div class="text">
                 <h2 class="about-courses">О курсе</h2>
