--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
             <div class="crane-shade">
                 <img class="crane" src="./img/photo1.png" alt="Crane-Cameraman">
-                <img class="last-shade" src="./img/Ellipse3.png" alt="last-shade">
+                <img class="last-shade" src="./img/Ellipse2.png" alt="last-shade">
             </div>
 
             <div class="duration">
@@ -135,7 +135,7 @@
 
             <h2>Что узнаем</h2>
 
-            <ul>
+            <ul class="what-list">
                 <li>Кто чем занят в съёмочной группе;</li>
                 <li>На какие этапы делится кинопроизводство;</li>
                 <li>Как выглядит сценарий фильма и как он меняется по ходу съёмок;</li>
