--- a/index.html
+++ b/index.html
@@ -27,26 +27,6 @@
                 <li class="courses-list"><img class="date" src="./img/calendar_2.png" alt="date">8 сентября</li>
             </ul>
 
-            <!-- !!!неправильная версия!!! -->
-
-            <!-- <div class="nav">
-
-                <div class="courses">
-                    <img class="globe" src="./img/globe.png" alt="globe">
-                    <p class="nav-status"> онлайн курс</p>
-                </div>
-
-                <div class="time">
-                    <img class="clock" src="./img/img_135744.png" alt="clock">
-                    <p class="nav-status">18 часов</p>
-                </div>
-
-                <div class="date">
-                    <img class="calendar" src="./img/calendar_2.png" alt="calendar">
-                    <p class="nav-status">8 сентября</p>
-                </div>
-
-            </div> -->
 
 
             <section class="how-to">
@@ -152,21 +132,21 @@
             <div class="programm-items ">
 
                 <div class="oscar coll">
-                    <img src="./img/Rectangle5.png" alt="Oscar icon">
+                    <img class="card" src="./img/Rectangle5.png" alt="Oscar icon">
                     <h4 class="prog-text">1. Как создают кино</h4>
                     <p class="prog-name-date">8 сентября 20:00 <br> Данила Кузнецов</p>
                 </div>
 
 
                 <div class="list coll">
-                    <img src="./img/Rectangle7.png" alt="List icon">
+                    <img class="card" src="./img/Rectangle7.png" alt="List icon">
                     <h4 class="prog-text">2. Взгляд драматурга</h4>
                     <p class="prog-name-date">10 сентября 20:00 <br> Данила Кузнецов</p>
                 </div>
 
 
                 <div class="clapperboard coll">
-                    <img src="./img/Rectangle9.png" alt="clapperboard icon">
+                    <img class="card" src="./img/Rectangle9.png" alt="clapperboard icon">
                     <h4 class="prog-text">3. Взгляд режиссёра</h4>
                     <p class="prog-name-date">13 сентября 13:00 <br> Данила Кузнецов</p>
 
@@ -174,21 +154,21 @@
 
 
                 <div class="film-reel coll">
-                    <img src="./img/Rectangle13.png" alt="film reel icon">
+                    <img class="card" src="./img/Rectangle13.png" alt="film reel icon">
                     <h4 class="prog-text">4. Взгляд монтажёра</h4>
                     <p class="prog-name-date">15 сентября 20:00 <br> Данила Кузнецов</p>
                 </div>
 
 
                 <div class="mask coll">
-                    <img src="./img/Rectangle14.png" alt="mask icon">
+                    <img class="card" src="./img/Rectangle14.png" alt="mask icon">
                     <h4 class="prog-text">5. Жанры в кино</h4>
                     <p class="prog-name-date">17 сентября 20:00 <br> Данила Кузнецов</p>
                 </div>
 
 
                 <div class="video coll">
-                    <img src="./img/Rectangle15.png" alt="video icon">
+                    <img class="card" src="./img/Rectangle15.png" alt="video icon">
                     <h4 class="prog-text">6. Язык кино. Семинар</h4>
                     <p class="prog-name-date">20 сентября 13:00 <br> Данила Кузнецов</p>
 
@@ -196,34 +176,76 @@
 
 
                 <div class="star coll">
-                    <img src="./img/Rectangle19.png" alt="star icon">
+                    <img class="card" src="./img/Rectangle19.png" alt="star icon">
                     <h4 class="prog-text">7. Взгляд кинокритика</h4>
                     <p class="prog-name-date">21 сентября 19:00 <br> Дмитрий Скворцов</p>
                 </div>
 
 
                 <div class="glasses coll">
-                    <img src="./img/Rectangle20.png" alt="glasses icon">
+                    <img class="card" src="./img/Rectangle20.png" alt="glasses icon">
                     <h4 class="prog-text no-br">8. Осознанный зритель. <br> Семинар</h4>
                     <p class="prog-name-date">22 сентября 19:00 <br> Дмитрий Скворцов</p>
                 </div>
             </div>
         </section>
-        <section class="grey-block">
-            <h2>Курс прошло уже 1616 человек</h2>
-            <div class="comment">
+
+
+        <section class="review-block">
+            <div class="review-left">
+                <h2>Курс прошло уже 1616 человек</h2>
+                <div class="comment">
+                    <p>
+                        Курс профессионально подготовлен, изложение материала весьма доступное, благодаря прекрасному
+                        изложению лекторов и демонстрации примеров. А наличие домашних заданий позволяет закрепить все
+                        полученные знания на практике. Теперь другими глазами смотрю фильмы, считываю не только сюжет ,
+                        но и
+                        могу оценить работу режиссера, оператора, монтажера и т.д. Спасибо!
+                    </p>
+                </div>
+                <div class="avatar-fb">
+                    <img class="avatar" src="./img/1-9.png" alt="Avatar">
+                    <div class="name-fb">
+                        <h3>Екатерина Палехова</h3>
+                        <a class="logo-avatar" href="https://facebook.com" target="_blank"><img src="./img/fb_2-1.png"
+                                alt="facebook"></a>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="cost-block">
+
+
+
+            <h2>Начало курса — 8 сентября</h2>
+            <p>Стоимость <br>
+                <span class="cost-weight"> 3900 руб. </span>
+            </p>
+
+            <div class="cost-lesson-now">
+
+                <div class="cost-level">
+                    <p>
+                        <span class="level-now">Для любого уровня</span><br>
+                        Курс подходит и тем, кто начинает «с нуля», и тем, кто хочет упорядочить имеющиеся знания.
+                    </p>
+                </div>
+
+                <div class="cost-now">
+                    <p>
+                        <span class="level-now">Проходите сейчас</span><br>
+                        Если вы не успели на вебинар, всегда можете посмотреть запись в личном кабинете
+                    </p>
+                </div>
 
             </div>
 
 
 
 
-
-
-
         </section>
-
-
 
 
 
