--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
 
 
-            <h2>Начало курса — 8 сентября</h2>
+            <h2 class="cost-left">Начало курса — 8 сентября</h2>
             <p>Стоимость <br>
                 <span class="cost-weight"> 3900 руб. </span>
             </p>
@@ -241,16 +241,30 @@
                 </div>
 
             </div>
-
-
-
-
         </section>
-
-
-
-
     </main>
+
+    <footer>
+
+        <div class="footer-left">
+            <img class="sync-white" src="./img/logo_mobile_white1.png" alt="Sync-white">
+            <div class="logo-icon">
+
+
+
+
+            </div>
+
+        </div>
+        <div class="footer-right"></div>
+
+
+
+
+
+
+
+    </footer>
 </body>
 
 </html>
