--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Cinema</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="shortcut icon" href="./img/favicon.ico.png" type="image/x-icon">
-    <link rel="stylesheet" href="https://kit.fontawesome.com/a1dbf9be79.css" crossorigin="anonymous">
+
 </head>
 
 <body>
@@ -246,19 +246,35 @@
 
     <footer>
 
-        <div class="footer-left">
-            <img class="sync-white" src="./img/logo_mobile_white1.png" alt="Sync-white">
-            <div class="logo-icon">
-
-
-
+        <div class="footer-flex">
+            <div class="footer-left">
+                <img class="sync-white" src="./img/logo_mobile_white1.png" alt="Sync-white">
+                <div class="logo-icon">
+                    <ul class="logo-list">
+                        <li><a href="https://instagram.com" target="_blank"><img src="./img/inst.png"
+                                    alt="ins-logo"></a>
+                        </li>
+                        <li><a href="https://facebook.com" target="_blank"><img src="./img/fb.png" alt="fb-logo"></a>
+                        </li>
+                        <li><a href="https://vk.com" target="_blank"><img src="./img/vk.png" alt="vk-logo"></a>
+                        </li>
+                        <li><a href="https://whatsapp.com" target="_blank"><img src="./img/wp.png" alt="wp-logo"></a>
+                        </li>
+                    </ul>
+                </div>
 
             </div>
+            <div class="footer-right">
+                <ul class="contact-list">
+                    <li><img class="space-right" src="./img/phone_white.png" alt="phone"> +7 (499) 39-146-39</li>
+                    <li><img class="space-right" src="./img/mail_white.png" alt="email"><a
+                            href="mailto:kemikable@gmail.com"> hello@synchronize.ru</a></li>
+                </ul>
 
+            </div>
         </div>
-        <div class="footer-right"></div>
 
-
+        <p class="copyright">© Синхронизация, 2020</p>
 
 
 
