--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     </header>
     <main>
 
-        <div class="first-title">
 
+        <nav>
             <ul class="courses">
 
                 <li class="courses-list"><img class="globe" src="./img/globe.png" alt="globe">онлайн-курс</li>
@@ -27,8 +27,8 @@
                 <li class="courses-list"><img class="date" src="./img/calendar_2.png" alt="date">8 сентября</li>
             </ul>
 
-
-
+        </nav>
+        <div class="first-title">
             <section class="how-to">
                 <h1>Как смотреть кино</h1>
                 <div class="sitting-shade">
@@ -189,35 +189,35 @@
                 </div>
             </div>
         </section>
+    </main>
 
+    <section class="review-block">
+        <div class="review-left">
+            <h2>Курс прошло уже 1616 человек</h2>
+            <div class="comment">
+                <p>
+                    Курс профессионально подготовлен, изложение материала весьма доступное, благодаря прекрасному
+                    изложению лекторов и демонстрации примеров. А наличие домашних заданий позволяет закрепить все
+                    полученные знания на практике. Теперь другими глазами смотрю фильмы, считываю не только сюжет ,
+                    но и
+                    могу оценить работу режиссера, оператора, монтажера и т.д. Спасибо!
+                </p>
+            </div>
+            <div class="avatar-fb">
+                <img class="avatar" src="./img/1-9.png" alt="Avatar">
+                <div class="name-fb">
+                    <h3>Екатерина Палехова</h3>
+                    <a class="logo-avatar" href="https://facebook.com" target="_blank"><img src="./img/fb_2-1.png"
+                            alt="facebook"></a>
 
-        <section class="review-block">
-            <div class="review-left">
-                <h2>Курс прошло уже 1616 человек</h2>
-                <div class="comment">
-                    <p>
-                        Курс профессионально подготовлен, изложение материала весьма доступное, благодаря прекрасному
-                        изложению лекторов и демонстрации примеров. А наличие домашних заданий позволяет закрепить все
-                        полученные знания на практике. Теперь другими глазами смотрю фильмы, считываю не только сюжет ,
-                        но и
-                        могу оценить работу режиссера, оператора, монтажера и т.д. Спасибо!
-                    </p>
-                </div>
-                <div class="avatar-fb">
-                    <img class="avatar" src="./img/1-9.png" alt="Avatar">
-                    <div class="name-fb">
-                        <h3>Екатерина Палехова</h3>
-                        <a class="logo-avatar" href="https://facebook.com" target="_blank"><img src="./img/fb_2-1.png"
-                                alt="facebook"></a>
-
-                    </div>
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
 
+
+    <footer>
         <section class="cost-block">
-
-
 
             <h2 class="cost-left">Начало курса — 8 сентября</h2>
             <p>Стоимость <br>
@@ -242,9 +242,8 @@
 
             </div>
         </section>
-    </main>
 
-    <footer>
+
 
         <div class="footer-flex">
             <div class="footer-left">
@@ -275,9 +274,6 @@
         </div>
 
         <p class="copyright">© Синхронизация, 2020</p>
-
-
-
 
 
     </footer>
