--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             <div class="comment">
                 <p>
                     Курс профессионально подготовлен, изложение материала весьма доступное, благодаря прекрасному
-                    изложению лекторов и демонстрации примеров. А наличие домашних заданий позволяет закрепить все
+                    изложению git лекторов и демонстрации примеров. А наличие домашних заданий позволяет закрепить все
                     полученные знания на практике. Теперь другими глазами смотрю фильмы, считываю не только сюжет ,
                     но и
                     могу оценить работу режиссера, оператора, монтажера и т.д. Спасибо!
