--- a/index.html
+++ b/index.html
@@ -202,13 +202,14 @@
                     но и
                     могу оценить работу режиссера, оператора, монтажера и т.д. Спасибо!
                 </p>
-            </div>
-            <div class="avatar-fb">
-                <img class="avatar" src="./img/1-9.png" alt="Avatar">
-                <div class="name-fb">
-                    <h3>Екатерина Палехова</h3>
-                    <a class="logo-avatar" href="https://facebook.com" target="_blank"><img src="./img/fb_2-1.png"
-                            alt="facebook"></a>
+                <div class="avatar-fb">
+                    <img class="avatar" src="./img/1-9.png" alt="Avatar">
+                    <div class="name-fb">
+                        <h3 class="comment-palexova">Екатерина Палехова</h3>
+                        <a class="logo-avatar" href="https://facebook.com" target="_blank"><img src="./img/fb_2-1.png"
+                                alt="facebook"></a>
+                    </div>
+
 
                 </div>
             </div>
@@ -242,12 +243,16 @@
 
             </div>
         </section>
-
-
-
         <div class="footer-flex">
             <div class="footer-left">
-                <img class="sync-white" src="./img/logo_mobile_white1.png" alt="Sync-white">
+
+                <div class="logo-white">
+                    <img class="sync-white" src="./img/logo_mobile_white1.png" alt="Sync-white">
+                </div>
+
+
+
+
                 <div class="logo-icon">
                     <ul class="logo-list">
                         <li><a href="https://instagram.com" target="_blank"><img src="./img/inst.png"
@@ -261,8 +266,9 @@
                         </li>
                     </ul>
                 </div>
-
             </div>
+
+
             <div class="footer-right">
                 <ul class="contact-list">
                     <li><img class="space-right" src="./img/phone_white.png" alt="phone"> +7 (499) 39-146-39</li>
